force-app/main/default/objects/Bank_Details__mdt/fields/A_C_Name__c.field-meta.xml
<CustomField>
    <fullName>A_C_Name__c</fullName>
    <label>A/C Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>