force-app/main/default/objects/Bank_Details__mdt/fields/A_C_No__c.field-meta.xml
<CustomField>
    <fullName>A_C_No__c</fullName>
    <label>A/C No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>