force-app/main/default/objects/Bank_Details__mdt/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <label>Branch Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>