force-app/main/default/objects/Bank_Details__mdt/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <label>IFSC Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>